packages/compiler-rs/tests/snapshots/hmr__export_default_with_function_declaration.snap
---
source: tests/hmr.rs
expression: code
---
export default function Comp() {}
Comp.__hmrId = "52164bac249078a3";
__VUE_HMR_RUNTIME__.createRecord("52164bac249078a3", Comp);
if (import.meta.hot) import.meta.hot.accept((mod) => {
  __VUE_HMR_RUNTIME__[typeof mod.default === "function" ? "rerender" : "reload"](mod.default.__hmrId, mod.default);
});
